--- a/index.html
+++ b/index.html
@@ -111,11 +111,123 @@
             overflow: hidden;
         }
 
+        .hero-video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            min-width: 120%;
+            min-height: 120%;
+            width: auto;
+            height: auto;
+            z-index: -2;
+            object-fit: cover;
+            filter: blur(1px) saturate(1.3) contrast(1.1);
+            animation: videoFloat 20s ease-in-out infinite;
+        }
+
+        @keyframes videoFloat {
+            0%, 100% {
+                transform: translate(-50%, -50%) scale(1);
+                filter: blur(1px) saturate(1.3) contrast(1.1);
+            }
+            25% {
+                transform: translate(-48%, -52%) scale(1.05);
+                filter: blur(0.5px) saturate(1.4) contrast(1.2);
+            }
+            50% {
+                transform: translate(-52%, -48%) scale(1.08);
+                filter: blur(1.5px) saturate(1.2) contrast(1.0);
+            }
+            75% {
+                transform: translate(-48%, -52%) scale(1.03);
+                filter: blur(0.8px) saturate(1.5) contrast(1.15);
+            }
+        }
+
+        .hero-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background:
+                radial-gradient(circle at 30% 20%, rgba(255, 255, 255, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 70% 80%, rgba(0, 0, 0, 0.2) 0%, transparent 50%),
+                linear-gradient(
+                    135deg,
+                    rgba(0, 0, 0, 0.3) 0%,
+                    rgba(255, 255, 255, 0.05) 30%,
+                    rgba(0, 0, 0, 0.1) 70%,
+                    rgba(0, 0, 0, 0.4) 100%
+                );
+            z-index: -1;
+            animation: overlayShift 15s ease-in-out infinite;
+        }
+
+        @keyframes overlayShift {
+            0%, 100% {
+                background:
+                    radial-gradient(circle at 30% 20%, rgba(255, 255, 255, 0.1) 0%, transparent 50%),
+                    radial-gradient(circle at 70% 80%, rgba(0, 0, 0, 0.2) 0%, transparent 50%),
+                    linear-gradient(135deg, rgba(0, 0, 0, 0.3) 0%, rgba(255, 255, 255, 0.05) 30%, rgba(0, 0, 0, 0.1) 70%, rgba(0, 0, 0, 0.4) 100%);
+            }
+            50% {
+                background:
+                    radial-gradient(circle at 70% 30%, rgba(255, 255, 255, 0.15) 0%, transparent 60%),
+                    radial-gradient(circle at 20% 70%, rgba(0, 0, 0, 0.25) 0%, transparent 40%),
+                    linear-gradient(225deg, rgba(0, 0, 0, 0.2) 0%, rgba(255, 255, 255, 0.08) 40%, rgba(0, 0, 0, 0.15) 80%, rgba(0, 0, 0, 0.35) 100%);
+            }
+        }
+
         .hero-content {
             text-align: center;
             max-width: 900px;
-            padding: 0 40px;
-            animation: fadeUp 1.2s ease;
+            padding: 40px;
+            animation: fadeUp 1.2s ease, contentFloat 25s ease-in-out infinite;
+            background: rgba(255, 255, 255, 0.48);
+            backdrop-filter: blur(15px) saturate(1.2);
+            border-radius: 12px;
+            box-shadow:
+                0 25px 50px rgba(0, 0, 0, 0.15),
+                0 10px 25px rgba(0, 0, 0, 0.08),
+                inset 0 1px 0 rgba(255, 255, 255, 0.4);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero-content::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background:
+                radial-gradient(circle at 20% 30%, rgba(255, 255, 255, 0.1) 0%, transparent 30%),
+                radial-gradient(circle at 80% 70%, rgba(0, 0, 0, 0.03) 0%, transparent 40%);
+            animation: shimmer 30s linear infinite;
+            pointer-events: none;
+            z-index: -1;
+        }
+
+        @keyframes contentFloat {
+            0%, 100% {
+                transform: translateY(0) scale(1);
+            }
+            50% {
+                transform: translateY(-5px) scale(1.01);
+            }
+        }
+
+        @keyframes shimmer {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
         }
 
         @keyframes fadeUp {
@@ -746,6 +858,16 @@
                 font-size: 32px;
             }
 
+            .hero-content {
+                padding: 30px;
+                max-width: 90%;
+            }
+
+            .hero-video {
+                /* Ensure video covers mobile screens properly */
+                object-position: center center;
+            }
+
             .paintings-grid {
                 grid-template-columns: 1fr;
             }
@@ -796,6 +918,16 @@
 
     <!-- Hero -->
     <section class="hero">
+        <video
+            class="hero-video"
+            autoplay
+            muted
+            loop
+            playsinline
+            poster="images/paintings/painting-001.jpg">
+            <source src="videos/hero-video.mp4" type="video/mp4">
+        </video>
+        <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Un pont entre<br>abstraction et figuration</h1>
             <p class="subtitle">Peinture à l'huile & Encre de Chine</p>
