NUCLEAR MODE: Clean drone video - skip painting pollution frame

--- a/index.html
+++ b/index.html
@@ -1362,9 +1362,9 @@
         const openingVideo = document.getElementById('openingVideo');
         const heroVideo = document.querySelector('.hero-video');
 
-        // Set drone video for both opening and hero
-        openingVideo.src = 'videos/hero-drone.mp4';
-        heroVideo.src = 'videos/hero-drone.mp4';
+        // Set clean drone video for both opening and hero
+        openingVideo.src = 'videos/hero-drone-clean.mp4';
+        heroVideo.src = 'videos/hero-drone-clean.mp4';
 
         // Check if user wants to skip opening
         const skipOpening = sessionStorage.getItem('skipDroneOpening');
