--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@
             height: 100%;
             object-fit: cover;
             transition: var(--transition);
+            opacity: 1;
         }
 
         .painting-card:hover .painting-image {
